# PrimitiveAMI

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  world_urls.txt
.github/workflows/: test.yaml
configs/: demo.yaml  random_interaction.yaml  train.yaml
configs/agent/: curiosity_ppo_agent.yaml  random_agent.yaml
configs/data_collector/: dict_dynamics_trajectory.yaml  dict_observation_dynamics_trajectory.yaml  dict_observation_time_series_dynamics_trajectory.yaml  dict_time_series_dynamics_trajectory.yaml
configs/environment/: frame_discrete_sleep.yaml  frame_locomotion_sleep.yaml  frame_locomotion_sleep_with_deadzone.yaml
configs/experiment/: inverse_forward_ppo_from_checkpoint.yaml  time_series.yaml  vae.yaml  vae_time_series.yaml  vae_time_series_discrete_action.yaml  vae_time_series_large.yaml  with_deadzone.yaml
configs/hydra/: default.yaml
configs/interaction/: fixed_step.yaml
configs/model/: inverse_forward_ppo.yaml  inverse_time_series_forward_ppo.yaml  vae_forward_ppo.yaml  vae_time_series_forward_discrete_action_ppo.yaml  vae_time_series_forward_ppo.yaml
configs/paths/: default.yaml
configs/trainers_builder/: inverse_forward_ppo.yaml  inverse_time_series_forward_ppo.yaml  vae_forward_ppo.yaml  vae_time_series_forward_ppo.yaml
demos/: demo_agent_interaction.py  demo_agent_learning.py  demo_discrete_actuator.py
scripts/: yaiba_plots.py
src/: __init__.py  random_interaction.py  train.py
src/agents/: agent.py  curiosity_ppo_agent.py  random_agent.py
src/data_collectors/: data_collector.py  dummy_dynamics_data_collector.py  dynamics_data_collector.py  empty_data_collector.py  obs_data_collector.py  sequential_data_collector.py  sequential_data_collectors.py  time_series_data_collector.py  time_series_dynamics_data_collector.py  trajectory_data_collector.py  vae_data_collector.py
src/environment/: environment.py  interval_adjustor.py  periodic_environment.py
src/interactions/: fixed_step_interaction.py  interaction.py
src/models/: forward_dynamics_lit_module.py  inverse_dynamics_lit_module.py  ppo_lit_module.py  time_series_forward_dynamics_lit_module.py  vae_lit_module.py
src/trainers/: forward_dynamics_trainer.py  inverse_dynamics_trainer.py  ppo_trainer.py  sequential_trainers.py  simple_pl_trainer.py  time_series_forward_dynamics_trainer.py  trainer.py
src/utils/: callbacks.py  environment.py  model.py  paths.py  random.py  step_record.py
tests/: test_version.py
tests/agents/: test_agent.py  (+2 more)
(+128 files in other folders)
