[tool.poetry]
name = "primitive-ami"
version = "0.1.0"
description = "原始自律機械知能の実装です。最も簡単で基礎的かつ、これからの土台となるAMIを実装します。"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0 !=2.0.1"
torchrl = "^0.1.1"
vrchat-io = {git = "https://github.com/Geson-anko/vrchat-io.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"
pytest-slow = "^0.0.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"



[tool.poetry.group.demo.dependencies]
colorlog = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"

minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
